<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_random">Random</string>

    <string name="title_hint">Activity Name</string>
    <string name="focus_time_duration_hint">Focus Time Duration (in minutes)</string>
    <string name="action_save">Save</string>
    <string name="add_habit">Add Habit</string>
    <string name="start_time">Start Time</string>
    <string name="habit_deleted">Habit has been deleted</string>
    <string name="priority_level">Priority Level</string>
    <string name="minutes">Minutes</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail_habit">ScrollingActivity</string>
    <string name="title_activity_random">Random Habit</string>

    <!-- Snackbar -->
    <string name="empty_message">Habit cannot be empty</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>

    <!-- Filter -->
    <string name="action_sort">sort</string>
    <string name="filter_start_time">By Start Time</string>
    <string name="filter_minutes_focus">By Minutes Focus</string>
    <string name="filter_title_name">By Title Name</string>

    <!-- Priority Level-->
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <!-- Count Down-->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="open_count_down">Open Count Down</string>
    <string name="item_priority_level">Item Priority Level</string>
    <string name="habit_tracker">Habit \ntracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_on_boarding_one">WELCOME TO Habit \ntracker</string>
    <string name="desc_img_one">Image On Boarding One</string>
    <string name="desc_on_boarding_one">We can help you to be a better \nversion of yourself.</string>
    <string name="title_on_boarding_two">CREATE NEW \nHABIT EASILY</string>
    <string name="title_on_boarding_three">let\'\s start your good habit here</string>
    <string name="get_started">Get Started</string>
    <string name="homepage">Homepage</string>
    <string name="habit_list">Habit List</string>
    <string name="start_your_habit_here">Start your habit here</string>
    <string name="filter">Filter</string>
    <string name="new_habit">New Habit</string>
    <string name="desc_card_list">We first make our habits,\nand then our habits\nmakes us.</string>
    <string name="anonymous">- Anonymous</string>
    <string name="setting">Setting</string>
    <string name="count_down">Count Down</string>
    <string name="random">Random</string>
</resources>