<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="12dp"
    android:layout_marginBottom="4dp"
    android:background="?android:attr/selectableItemBackground"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/layout_meta">

        <ImageView
            android:id="@+id/item_priority_level"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/priority_level"
            android:src="@drawable/ic_priority_high"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_hint"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_priority_level"
            app:layout_constraintTop_toTopOf="@+id/item_priority_level" />

        <TextView
            android:id="@+id/item_tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/item_tv_title"
            app:layout_constraintTop_toBottomOf="@+id/item_tv_title"
            tools:text="22:22" />

        <TextView
            android:id="@+id/item_tv_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/item_priority_level"
            app:layout_constraintStart_toStartOf="@+id/item_priority_level"
            app:layout_constraintTop_toTopOf="@+id/item_priority_level"
            tools:text="20" />

        <TextView
            android:id="@+id/textView6"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/minutes"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/item_tv_minutes"
            app:layout_constraintStart_toStartOf="@+id/item_tv_minutes"
            app:layout_constraintTop_toBottomOf="@+id/item_tv_minutes" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
